--- a/METADATA.yml
+++ b/METADATA.yml
@@ -17,7 +17,7 @@ description: >-
   Ground Truth with a collection of documents with the following
   characteristics:
 
-  Font: blackletter
+  font blackletter
 project-name: OCR-D
 project-website: https://ocr-d.de/
 language:
@@ -36,3 +36,4 @@ license:
     url: https://creativecommons.org/licenses/zero/1.0/
 gtTyp: data_structure_and_text
 format: Page-XML
+transcription-guidelines: OCR-D Ground Truth Guidelines https://ocr-d.de/en/gt-guidelines/trans/
