--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -27,7 +27,13 @@ jobs:
         git clone https://github.com/tboenig/gt-repo-scripts.git
         mv gt-repo-scripts/scripts scripts/
         rm -r gt-repo-scripts
+     
+     
+     # Instalations GT-Labelling Documentation
 
+    - name: install labeling
+      run: |
+        git clone https://github.com/tboenig/gt-guidelines.git
 
 
      
