--- a/.github/workflows/gtrepo.yml
+++ b/.github/workflows/gtrepo.yml
@@ -18,31 +18,33 @@ jobs:
     steps:
      
     - name: Git checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-     # Instalations Styles
+     # Installations Styles
       
-    - name: install anaylse xsl-styles
+    - name: install analyse xsl-styles
       run: | 
         git clone https://github.com/tboenig/gt-repo-scripts.git
         mv gt-repo-scripts/scripts scripts/
         rm -r gt-repo-scripts
-     
-     
-     # Instalations GT-Labelling Documentation
+
+     # Installations GT-Labelling Documentation
 
     - name: install labeling
       run: |
         git clone https://github.com/tboenig/gt-guidelines.git
 
-
      
     # Installation and Directories
       
+    - name: install jq
+      run: sudo apt-get install jq
+    
     - name: install ocrd
       run: |
        git clone --depth 1 https://github.com/OCR-D/core
        cd core
+       sudo make deps-ubuntu
        make install
        cd ..
        rm -rf core
@@ -68,7 +70,7 @@ jobs:
 
           
     
-   # Transformation and analysis
+   # Transformation and analyzing
     
     - name: Get SDK Version from config
       id: lookupSdkVersion
@@ -90,7 +92,7 @@ jobs:
         -s:scripts/gt-overview_metadata.xsl -o:ghout/table.md
       shell: bash
 
-    - name: detailed table view
+    - name: detailed table view 
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=OVERVIEW repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY \
@@ -104,6 +106,20 @@ jobs:
         -s:scripts/gt-overview_metadata.xsl -o:scripts/mets.sh
       shell: bash
       
+    - name: generate Metadata JSON file
+      run: |
+        java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
+        output=METAJSON repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER \
+        -s:scripts/gt-overview_metadata.xsl -o:ocrdzip_out/metadata_l.json
+      shell: bash
+      
+      
+    - name: format json file
+      run: |
+        jq '.' ocrdzip_out/metadata_l.json > ocrdzip_out/metadata.json
+        rm ocrdzip_out/metadata_l.json
+      
+      
     - name: generate README
       run: |
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
@@ -116,7 +132,14 @@ jobs:
         java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
         output=METSvolume repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER \
         -s:scripts/gt-overview_metadata.xsl -o:ocrdzip_out/mets.xml
-      shell: bash  
+      shell: bash
+      
+    - name: delete fileGrp DEFAULT
+      run: |
+        java -jar saxon-he-10.5.jar -xsl:scripts/gt-overview_metadata.xsl \
+        output=METSdefault repoBase=$GITHUB_REF_Name repoName=$GITHUB_REPOSITORY bagitDumpNum=$GITHUB_RUN_NUMBER \
+        -s:scripts/gt-overview_metadata.xsl
+      shell: bash   
   
     - name: Index-link
       run: |
@@ -180,15 +203,4 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4.3.3
       with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: ghout  # The folder the action should deploy.           
-   
-   
-   
-   
-   
-   
-   
-   
-          
-          
-  
+          folder: ghout  # The folder the action should deploy.
